[package]
name = "import_validator_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast streaming CSV parser
csv-core = "0.1"

# Deterministic decimals (avoid floats)
rust_decimal = { version = "1", default-features = true }

# Small, deterministic date handling
time = { version = "0.3", features = ["parsing", "formatting"] }

# Optional: better panic messages in dev
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
dev = ["console_error_panic_hook"]
